# molecule-benchmarks

./: .gitignore  README.md  README_ja.md  main.py  pyproject.toml
config/: C10H8.yaml  H2.yaml  N2.yaml  default.yaml
config/molecule/: C10H8.yaml  CH4.yaml  CO.yaml  Cr2.yaml  Fe2S2.yaml  H2.yaml  H24.yaml  H4.yaml  LiH.yaml  N2.yaml
molbench/: orchestrator.py  schema.py  wfn.py
molbench/calculator/: casci.py  ccsd.py  cisd.py  dmrg.py  hf.py
molbench/utils/: chem_tools.py  omegaconf.py
tutorial/: 1_calculate_energy.ipynb  2_analyze_wfn.ipynb
